Fixed some bugs with spacing and icons not showing up. Variablized more SASS.

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -27,6 +27,44 @@
   }
 }
 
+.btn-nav {
+  color: $secondary;
+  cursor: pointer;
+  padding: 0px 40px;
+  display: inline-block;
+  text-transform: uppercase;
+  line-height: 2.7em;
+  letter-spacing: 1.5px;
+  font-size: 1em;
+  outline: none;
+  position: relative;
+  font-size: 16px;
+  border: 3px solid $white;
+  background-color: transparent;
+  border-radius: 15px 0 15px 15px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn-nav:before {
+  content: "";
+  position: absolute;
+  right: -3px;
+  top: -3px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 35px 35px 0;
+  border-color: transparent $secondary transparent transparent;
+  z-index: 1;
+}
+
+.btn-nav:hover,
+.btn-nav.hover {
+  border-color: $title;
+  color: $title;
+}
+
 // Success button
 .btn-success {
   background-color: $success;
