--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -53,12 +53,18 @@ $hr-border-width:             $border-width;
 // Colors
 //
 
+$title:            #f36170;
 $text-color:       rgba(0, 0, 0, 0.87) !default;
 $background-color: #f5f5f5;
 
-$title:            #f36170;
 $red:              #e74c3c;
-$white:            #fff;
+$white:            #ffffff;
+$yellow:           #F5A623;
+$blue:             #2f99fa;
+$ltblue:           #75bbfc;
+$green:            #42b983;
+$ltgreen:          #75cea5;
+
 $primary:          #42b983;
 $secondary:        #2f99fa;
 $success:          #65e892;
