--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -74,6 +74,10 @@ section.post {
 		text-transform: uppercase;
 		color: $warning;
 	}
+  .post-tag {
+    text-transform: uppercase;
+    color: $red
+  }
   .read-time {
     color: $primary;
   }
